# pydantic-ai-filesystem-sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC-structured-approvals.md  api.md
docs/notes/: function-toolset-refactor.md  mount-based-refactor.md  pydantic-ai-filesystem-sandbox-hierarchical-root-spec.md
src/pydantic_ai_filesystem_sandbox/: __init__.py  approval.py  approval_toolset.py  sandbox.py  toolset.py
tests/: __init__.py  test_integration.py  test_root_mode_and_derive.py  test_sandbox.py  test_security_regressions.py
