[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-filesystem-sandbox"
dynamic = ["version"]
description = "Filesystem sandbox toolset for PydanticAI agents with LLM-friendly errors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zbigniew Åukasiak" },
]
keywords = [
    "pydantic-ai",
    "llm",
    "agent",
    "tools",
    "sandbox",
    "filesystem",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "pydantic-ai-blocking-approval>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/zby/pydantic-ai-filesystem-sandbox"
Repository = "https://github.com/zby/pydantic-ai-filesystem-sandbox"

[tool.hatch.version]
path = "src/pydantic_ai_filesystem_sandbox/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_filesystem_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
